semant up: 60 out of 74, add all expr checkers, fix methods & attr issues, fix self_type issues, fix misc

--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,6 @@ assignments/PA4/*
 !assignments/PA4/semant.cc
 !assignments/PA4/semant.h
 !assignments/PA4/Makefile
+!assignments/PA4/cool-tree.handcode.h
 
 assignments/PA5/*
